@@ -53,9 +53,7 @@
  	         <legend i18n:translate=""> Shopping Cart </legend>
 	         <div tal:replace="structure view/renderCart">cart</div>
              
-              <tal:cond condition="view/isPlone3">
-                <div tal:replace="structure provider:getpaid.belowcartresume" />
-              </tal:cond>
+              <div tal:replace="structure provider:getpaid.belowcartresume" />
       
              
             <div id="save_order_template_entry" style="display: none">
