@@ -24,7 +24,7 @@ Testing checkout process for authenticated user (in this case, admin)
      >>> browser.getControl('Log in').click()
 
      >>> self.portal.portal_quickinstaller.installProduct('PloneGetPaid')
-     'Installing Dependencies\n'
+     ''
      >>> browser.getLink('Home').click()
      
 Testing the setup aspects of GetPaid. Setting required settings. 
